--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <div class="navigation d-md-flex d-none gap-3 m-0 py-1 px-3">
 
             </div>
-            <button id="hireMe" class="custom-btn btn w-max px-4 py-2 full-radius fs-6 ms-3">
+            <a href="#contact" id="hireMe" class="custom-btn btn w-max px-4 py-2 full-radius fs-6 ms-3">
                 Hire Me
-            </button>
+            </a>
         </nav>
     </header>
 
@@ -98,8 +98,8 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div style="min-height: 500px;"
-                                    class="col-12 col-md-6 p-5 d-flex justify-content-center align-items-center">
+                                <div
+                                    class="col-12 skill-sec col-md-6 p-5 d-flex justify-content-center align-items-center">
                                     <div class="skills d-flex justify-content-center align-items-center">
                                         <h5 class="m-0 text-center">MY <br> SKILLS</h5>
                                         <div style="--angle: 35deg; --dis: 120px;"
@@ -115,17 +115,17 @@
                                             class="skill d-flex justify-content-center align-items-center text-center fs-6">
                                             JS
                                             <div style=" --angle: 35deg; --dis: 120px;"
-                                                class="skill d-md-flex d-none justify-content-center align-items-center text-center fs-6">
+                                                class="skill d-flex show justify-content-center align-items-center text-center fs-6">
                                                 ELECTRON <br> jS
                                             </div>
                                             <div style="--angle: 146deg; --dis: 120px;"
-                                                class="skill d-md-flex d-none justify-content-center align-items-center text-center fs-6">
+                                                class="skill d-flex show justify-content-center align-items-center text-center fs-6">
                                                 REACT
                                                 <br>
                                                 JS
                                             </div>
                                             <div style="--angle: 90deg; --dis: 130px;"
-                                                class="skill d-md-flex d-none justify-content-center align-items-center text-center fs-6">
+                                                class="skill d-flex show justify-content-center align-items-center text-center fs-6">
                                                 REACT
                                                 <br>
                                                 NATIVE
@@ -154,15 +154,15 @@
                                             <br>
                                             STACK
                                             <div style="--angle: 213deg; --dis: 120px;"
-                                                class="skill d-md-flex d-none justify-content-center align-items-center text-center fs-6">
+                                                class="skill d-flex show justify-content-center align-items-center text-center fs-6">
                                                 NODE JS
                                             </div>
                                             <div style="--angle: 269deg; --dis: 130px;"
-                                                class="skill d-md-flex d-none justify-content-center align-items-center text-center fs-6">
+                                                class="skill d-flex show justify-content-center align-items-center text-center fs-6">
                                                 API'S
                                             </div>
                                             <div style="--angle: 327deg; --dis: 120px;"
-                                                class="skill d-md-flex d-none justify-content-center align-items-center text-center fs-6">
+                                                class="skill d-flex show justify-content-center align-items-center text-center fs-6">
                                                 GIT HUB
 
                                             </div>
@@ -237,21 +237,21 @@
                                     <div class="project active px-3 py-2 w-max d-flex align-items-center gap-4">
                                         <img src="https://www.electronjs.org/assets/img/logo.svg" alt="">
                                         <div>
-                                            <h5 class="fs-5 m-0">Moviza - Desktop App</h5>
+                                            <h5 class="fs-6 m-0">Moviza - Desktop App</h5>
                                             <span style="color: var(--clr-primary-1);" class="m-0">ELECTRON JS</span>
                                         </div>
                                     </div>
                                     <div class="project px-3 py-2 w-max d-flex align-items-center gap-4">
                                         <img src="https://reactnative.dev/img/header_logo.svg" alt="">
                                         <div>
-                                            <h5 class="fs-5 m-0">Moviza - Mobile App</h5>
+                                            <h5 class="fs-6 m-0">Moviza - Mobile App</h5>
                                             <span style="color: var(--clr-primary-1);" class="m-0">REACT NATIVE</span>
                                         </div>
                                     </div>
                                     <div class="project px-3 py-2 w-max d-flex align-items-center gap-4">
                                         <img src="images/js.png" alt="">
                                         <div>
-                                            <h5 class="fs-5 m-0">FileSar - File Sharing Website</h5>
+                                            <h5 class="fs-6 m-0">FileSar - File Sharing Website</h5>
                                             <span style="color: var(--clr-primary-1);" class="m-0">JavaScript</span>
                                         </div>
                                     </div>
@@ -367,12 +367,12 @@
                         </div>
                     </section>
                 </div>
-                <div class="swiper-slide clr-bg-dark">
+                <div id="contact" class="swiper-slide clr-bg-dark">
                     <section id="MyExperience" class="container-fluid h-100 clr-bg-dark">
                         <div class="container pt-md-5 pb-md-5 mt-md-5 mb-md-5 h-100">
                             <form id="telegramForm" class="row align-items-center h-100">
                                 <div class="col-12 col-md-6 d-flex flex-column p-md-5">
-                                    <div class="formbox p-3 p-md-5 row">
+                                    <div class="formbox p-3 p-md-5 row py-5">
                                         <div class="col-12 mb-5">
                                             <h3 class="fs-1 text-g ">Lets Work Together</h3>
                                         </div>
@@ -404,7 +404,7 @@
                                     </div>
 
                                 </div>
-                                <div class="col-12 exp-side col-md-6 d-flex flex-column gap-4">
+                                <div class="col-12 exp-side col-md-6 d-flex flex-column gap-4 p-3 py-5">
                                     <div class="d-flex cta  gap-3 justify-content-start align-items-center">
                                         <div
                                             class="icon fs-3 custom-btn d-flex align-items-center justify-content-center full-radius">
@@ -452,7 +452,7 @@
                                                 </g>
                                             </svg>
                                         </div>
-                                        <a href="tel:+918778155671"><strong class="fs-5 m-0">+91 8778155671</strong></a>
+                                        <a href="tel:+918778155671"><strong class="fs-6 m-0">+91 8778155671</strong></a>
                                     </div>
                                     <div class="d-flex cta  gap-3 justify-content-start align-items-center">
                                         <div
@@ -501,7 +501,7 @@
                                                 </g>
                                             </svg>
                                         </div>
-                                        <a href="tel:+919962460782"><strong class="fs-5 m-0">+91 9962460782</strong></a>
+                                        <a href="tel:+919962460782"><strong class="fs-6 m-0">+91 9962460782</strong></a>
                                     </div>
                                     <div class="d-flex cta  gap-3 justify-content-start align-items-center">
                                         <div
@@ -517,7 +517,7 @@
                                             </svg>
                                         </div>
                                         <a href="mailto:devkarthikeyan214@gmail.com"><strong
-                                                class="fs-5 m-0">devkarthikeyan214@gmail.com</strong></a>
+                                                class="fs-6 m-0">devkarthikeyan214@gmail.com</strong></a>
                                     </div>
                                     <div class="d-flex cta  gap-3 justify-content-start align-items-center">
                                         <div
@@ -528,7 +528,7 @@
                                                     d="M6 19h3v-6h6v6h3v-9l-6-4.5L6 10zm-2 2V9l8-6l8 6v12h-7v-6h-2v6zm8-8.75" />
                                             </svg>
                                         </div>
-                                        <address class="fs-5 m-0"><strong>Address :</strong> <br> No. 13/2 P.N.K Garden
+                                        <address class="fs-6 m-0"><strong>Address :</strong> <br> No. 13/2 P.N.K Garden
                                             1st
                                             Street, <br> Mylapore,
                                             chennai -
