--- a/index.html
+++ b/index.html
@@ -235,6 +235,13 @@
                                 <div style="z-index: 10;" class="col-12 col-md-6 d-flex flex-column p-3 gap-3">
                                     <h3 class="display-3 fw-bold text-g mb-5">My Projects</h3>
                                     <div class="project active px-3 py-2 w-max d-flex align-items-center gap-4">
+                                        <img src="images/js.png" alt="">
+                                        <div>
+                                            <h5 class="fs-6 m-0">Email Builder - HTML Email Builder Website</h5>
+                                            <span style="color: var(--clr-primary-1);" class="m-0">JavaScript</span>
+                                        </div>
+                                    </div>
+                                    <div class="project px-3 py-2 w-max d-flex align-items-center gap-4">
                                         <img src="https://reactnative.dev/img/header_logo.svg" alt="">
                                         <div>
                                             <h5 class="fs-6 m-0">Moviza - Web App</h5>
@@ -266,6 +273,39 @@
                                 <div class="col-12 col-md-6">
                                     <div class="project-side w-100 position-relative">
                                         <div class="project-box d-flex active w-100 my-3 p-4 flex-column gap-3">
+                                            <!-- Swiper -->
+                                            <div class="swiper electronjs w-100">
+                                                <div class="swiper-wrapper">
+                                                    <div class="swiper-slide"><img class="w-100"
+                                                            src="images/email-builder-1.png" alt=""></div>
+                                                    <div class="swiper-slide"><img class="w-100"
+                                                            src="images/email-builder-2.png" alt=""></div>
+                                                    <div class="swiper-slide"><img class="w-100"
+                                                            src="images/email-builder-3.png" alt=""></div>
+                                                    <div class="swiper-slide"><img class="w-100"
+                                                            src="images/email-builder-4.png" alt=""></div>
+                                                </div>
+                                                <div class="swiper-pagination"></div>
+                                            </div>
+                                            <span style="color: var(--clr-primary-1);" class="m-0 mt-3">Js and
+                                                jQuery</span>
+                                            <h6 class="fs-6 m-0 "> Email Builder - HTML Email Builder Website
+                                            </h6>
+                                            <p>Developed an intuitive HTML email builder that allows users to create and
+                                                customize email templates effortlessly. With a drag-and-drop interface,
+                                                users can add text, images, and buttons, preview their emails in
+                                                real-time, and save and download templates for future use.
+                                            </p>
+                                            <a href="https://karthi-email-builder.netlify.app" target="_blank"
+                                                class="custom-btn-2 w-max full-radius px-3 py-1 d-flex gap-2 align-items-center">
+                                                Visit Now <svg xmlns="http://www.w3.org/2000/svg" width="1em"
+                                                    height="1em" viewBox="0 0 24 24">
+                                                    <path fill="currentColor"
+                                                        d="M16.15 13H5q-.425 0-.712-.288T4 12t.288-.712T5 11h11.15L13.3 8.15q-.3-.3-.288-.7t.288-.7q.3-.3.713-.312t.712.287L19.3 11.3q.15.15.213.325t.062.375t-.062.375t-.213.325l-4.575 4.575q-.3.3-.712.288t-.713-.313q-.275-.3-.288-.7t.288-.7z" />
+                                                </svg>
+                                            </a>
+                                        </div>
+                                        <div class="project-box d-flex w-100 my-3 p-4 flex-column gap-3">
                                             <!-- Swiper -->
                                             <div class="swiper reactnative w-100">
                                                 <div class="swiper-wrapper">
@@ -406,7 +446,6 @@
                                             </a>
                                         </div>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
